@@ -356,6 +356,7 @@ Revision	Version Updated		Log Message
 341		C++			Social reforms no longer in a temp function (no functional change).
 342		C++			Balance Upper House (and move out of a temp function).
 344		C++			Make room in configuration file for V2 gametype.
+354		C++			AHD now gets no_schools for all countries.
 361		C++			Experimental support for EU3:IN.  Warn when attempting to use start dates that are too early.
 367		C++			Support In Nomine-style three-part dates.
 376		C++			Use the parser to grab province data instead of doing it manually.  Hopefully fixes AHD Baltimore.
@@ -363,3 +364,4 @@ Revision	Version Updated		Log Message
 379		C++			Automated test scripts now test against multiple config files.
 380		C++			AHD unciv nations now get research points for reforms instead of techs.
 381		C++			Document "EU3gametype = in" setting in configuration.txt.
+383		C++			School reforms for AHD.
